# AI-Small-Tool

./: .gitignore  BossInsightAssistant.spec  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-11-boss-insight-assistant.md
docs/superpowers/specs/: 2026-06-11-boss-insight-assistant-design.md
scripts/: build_exe.ps1
src/boss_tool/: __init__.py  analysis.py  app.py  bailian.py  browser_dom.py  capture.py  config.py  exporter.py  fallback.py  gui.py  history.py  models.py  monitor.py  ocr.py  parsers.py  pipeline.py  storage.py
tests/: test_analysis_format.py  test_bailian.py  test_browser_dom.py  test_capture.py  test_capture_matching.py  test_config.py  test_exporter.py  test_fallback.py  test_gui_helpers.py  test_gui_performance.py  test_history.py  test_local_analysis.py  test_monitor.py  test_ocr.py  test_parsers.py  test_pipeline.py  test_storage.py
