[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boss-insight-assistant"
version = "0.1.0"
description = "Boss直聘桌面识别与AI建议工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Pillow>=10.4.0",
  "requests>=2.32.3",
  "rapidocr-onnxruntime>=1.4.4",
  "pywinauto>=0.6.8",
  "playwright>=1.60.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
